--- a/src/scss/_keys.scss
+++ b/src/scss/_keys.scss
@@ -122,3 +122,7 @@ div:nth-child(12) {
   border: 1px solid white;
   background-color: transparent;
 }
+
+.volumeSliderTiltle {
+  color: white;
+}
