ZreverbController component for thr reverb and state

--- a/src/scss/_keys.scss
+++ b/src/scss/_keys.scss
@@ -94,7 +94,8 @@ div:nth-child(12) {
 
 .octave,
 .release,
-.volume {
+.volume,
+.reverb {
   border: 1px solid white;
   color: white;
   display: flex;
