--- a/src/scss/_keys.scss
+++ b/src/scss/_keys.scss
@@ -37,7 +37,7 @@ div {
 .white {
   height: 16em;
   width: 4em;
-  z-index: 1;
+  z-index: 2;
   display: flex;
   align-items: flex-end;
   justify-content: center;
@@ -61,7 +61,7 @@ div {
   display: flex;
   align-items: flex-end;
   justify-content: center;
-  z-index: 2;
+  z-index: 3;
   color: #ffffff;
   border: 1px solid #000;
   border-radius: 0 0 3px 3px;
@@ -138,4 +138,9 @@ div:nth-child(12) {
 .reverb-decay,
 .reverb-preDelay {
   padding: 2rem;
+}
+
+.modal {
+  width: 20rem;
+  position: absolute;
 }
