--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -27,6 +27,13 @@ h3 {
   padding-bottom: 2rem;
 }
 
+a:focus,
+button:focus,
+input:focus,
+textarea:focus {
+  outline: none;
+}
+
 .zsynth {
   background-color: black;
   max-width: 1000px;
