--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -12,6 +12,10 @@ body {
   justify-content: center;
 }
 
+#root {
+  width: 100%;
+}
+
 a {
   color: black;
 }
@@ -36,8 +40,14 @@ textarea:focus {
 
 .zsynth {
   background-color: black;
-  max-width: 1000px;
+  max-width: 800px;
   width: 100%;
   display: flex;
   flex-direction: column;
+  margin: 0 auto;
+}
+
+p {
+  padding-top: 0.5rem;
+  font-size: 0.8rem;
 }
