--- a/src/scss/_controls.scss
+++ b/src/scss/_controls.scss
@@ -26,8 +26,15 @@
       padding: 0.2rem;
       margin-top: 0.5rem;
       color: gray;
+      outline: none;
+      -webkit-outline: none;
+      -moz-outline: none;
     }
   }
+}
+
+.resetParams {
+  color: gray;
 }
 
 li {
